[package]
name = "ortty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitcoin = { version = "0.31.0", features = ["base64", "rand", "serde"] }
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.14", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
image = "0.24.7"
inquire = "0.6.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
viuer = "0.7.1"
