[package]
name = "ortty"
version = "0.2.0"
edition = "2021"

# Config for 'cargo dist'
[workspace.metadata.dist]
# include = ["RELEASE_NOTES.md"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitcoin = { version = "0.31.0", features = ["base64", "rand", "serde"] }
bitcoincore-rpc = "0.18.0"
clap = { version = "4.4.14", features = ["derive", "env"] }
colored_json = "4.1.0"
crossterm = "0.27.0"
directories = "5.0.1"
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
image = "0.24.7"
inquire = "0.6.2"
open = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
viuer = "0.7.1"
